Fixes minor layout bug - row margin on right

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -18,7 +18,6 @@ label {
   font-weight: 600;
 }
 .container-fluid {
-  margin-top: 80px;
   margin-bottom: 1rem;
 }
 .tooltip {
